syntax = "proto3";

package service;

option go_package = "pkg/grpc";

service MemoAPI {
    rpc GetMemo(GetMemoRequest) returns (GetMemoResponse) {}
    rpc ListMemos(ListMemosRequest) returns (ListMemosResponse) {}
    rpc CreateMemo(CreateMemoRequest) returns (CreateMemoResponse) {}
    rpc UpdateMemo(UpdateMemoRequest) returns (UpdateMemoResponse) {}
    rpc DeleteMemo(DeleteMemoRequest) returns (DeleteMemoResponse) {}
}

message Memo {
    string id = 1;
    string title = 2;
    string description = 3;
}

message GetMemoRequest {
    string id = 1;
}

message GetMemoResponse {
    Memo memo = 1;
}

message ListMemosRequest {}

message ListMemosResponse {
    repeated Memo memos = 1;
}


message CreateMemoRequest {
    Memo memo = 1;
}

message CreateMemoResponse {
    bool success = 1;
    string id = 2;
}

message UpdateMemoRequest {
    Memo memo = 1;
}

message UpdateMemoResponse {
    bool success = 1;
    string id = 2;
}

message DeleteMemoRequest {
    string id = 1;
}

message DeleteMemoResponse {
    string id = 1;
}
